<resources>
    <string name="app_name">萌少女打砖块</string>
    <string name="title_activity_breakout">Breakout</string>
    <string name="launch">New Game</string>
    <string name="cont">Continue Game</string>
    <string name="sound">Sound</string>
    <string name="score"></string>
    
    <string name="version">对战版</string>
    <string name="btn_audio">声音开关</string>
    <string name="btn_1pstart">单人剧情模式</string>
    <string name="btn_2pstart">^_^</string>
    <string name="btn_about">前尘忆梦</string>
    <string name="btn_option">设置</string>
    <string name="prepare">双人对战</string>
    <string name="prepared">已准备</string>
    <string name="exit">退出</string>
    <string name="offline">对方已断开，游戏结束</string>
    <string name="ok">好</string>
    <string name="please2p">请使用茄子快传工具进行双人对战</string>
    <string name="exit_text">确定要退出吗？</string>
    <string name="cancel">取消</string>
    
    <string name="btn_stage_1">相        识</string>
    <string name="btn_stage_2">相        遇</string>
    <string name="btn_stage_3">相        知</string>
    <string name="btn_stage_4">相        恋</string>
    <string name="btn_stage_5">相        依</string>
    <string name="btn_stage_6">相        离</string>
    
    <string name="btn_return">返回</string>
    
    <string name="result_title">结       果</string>
    <string name="result_stage">第 1  关</string>
    <string name="result_btn_reload">重来</string>
    <string name="result_btn_return">返回</string>
    <string name="result_btn_next">下一关</string>
</resources>
