<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/levelchoose">
   <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_return" />
    <Button
        android:id="@+id/btn_stage_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stage_1" />

    <Button
        android:id="@+id/btn_stage_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stage_2" />

    <Button
        android:id="@+id/btn_stage_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stage_3" />

 

    <Button
        android:id="@+id/btn_stage_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stage_4" />

    <Button
        android:id="@+id/btn_stage_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stage_5" />

    <Button
        android:id="@+id/btn_stage_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_stage_6" />

</LinearLayout>
