<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
          android:layout_gravity="bottom|right"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_sound_on"
            android:textSize="27sp" />

        <ImageButton
            android:id="@+id/btn_1pstart"
            android:scaleType="centerInside"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/btn_single"
            android:background="@drawable/sign_in_button"
            android:text="@string/btn_1pstart"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_prepare"
            android:scaleType="centerInside"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/btn_two"
            android:background="@drawable/sign_in_button"
            android:text="@string/prepare"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        

        <ImageButton
            android:id="@+id/btn_option"
            android:layout_width="120dp"
            android:textColor="#FFFFFF"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:scaleType="centerInside"
            android:src="@drawable/btn_option"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/sign_in_button"
            android:text="@string/btn_option"
            android:textSize="20sp" />

        <ImageButton
            android:textColor="#FFFFFF"
            android:id="@+id/btn_about"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            android:src="@drawable/btn_develop"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/sign_in_button"
            android:text="@string/btn_about"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>